fix bugs and start to fix end game

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -10,4 +10,7 @@ commands:
   startlobby:
     description: starts a death match lobby
     permission: deathmatch.startdeathmatch
-
+  startgame:
+    description: does what is says on the tin
+  join:
+    description: joins
